@@ -3693,6 +3693,8 @@ STR_6587    :The OpenRCT2 Title Theme is a work of Allister Brimble,{NEWLINE}lic
 STR_6588    :Thanks to Herman Riddering for allowing us to record the 35er Voigt.
 STR_6589    :Show window buttons on the left
 STR_6590    :Show the window buttons (e.g. to close the window) on the left of the title bar instead of on the right.
+STR_6591    :Staff member is currently fixing a ride and can’t be fired.
+STR_6592    :Staff member is currently inspecting a ride and can’t be fired.
 
 #############
 # Scenarios #
