@@ -3997,6 +3997,9 @@ enum : uint16_t
     STR_WINDOW_BUTTONS_ON_THE_LEFT = 6589,
     STR_WINDOW_BUTTONS_ON_THE_LEFT_TIP = 6590,
 
+    STR_CANT_FIRE_STAFF_FIXING = 6591,
+    STR_CANT_FIRE_STAFF_INSPECTING = 6592,
+
     // Have to include resource strings (from scenarios and objects) for the time being now that language is partially working
     /* MAX_STR_COUNT = 32768 */ // MAX_STR_COUNT - upper limit for number of strings, not the current count strings
 };
